static/css/main.css
/*Global*/
body {
    font-family: 'Roboto Condensed', sans-serif;
}

.center-flex{
    display: flex;
    align-items: center;
    justify-content: center;
}

/*Fonts*/
body h1,
h2,
h3,
h4,
h5,
h6,
.support-text {
    font-family: 'Oswald', sans-serif;
}

.field-title {
    font-weight: 700;
}

.course-name  a{
    color: black;
}

.course-name a:hover{
    color: #5e5b5b;
}

.title a{
    color: black;
}

.title a:hover {
    color: #5e5b5b;
}
/*Index*/
.index-title{
    margin-top: 15px;
}

.slider{
    max-height: 70%;
}

/*Nav Bar*/

nav {
    background-color: #292c2f;
}

nav .nav-wrapper {
    font-family: 'Oswald', sans-serif;
    font-size: 20px;
}

#mobile-demo {
    background-color: #3e3e3e;
    color: white;
}

#mobile-demo a {
    color: white;
    font-size: 20px;
    font-family: 'Oswald', sans-serif;
}


/*Homepage*/
.slider .slides li .caption h3 {
    text-shadow: 5px 4px 3px rgba(150, 150, 144, 0.7);
    font-size: 4rem;
}

.slider .slides li .caption h5 {
    text-shadow: 5px 4px 3px rgba(150, 150, 144, 0.7);
}

.parallax-container {
    min-height: 500px;
    line-height: 0;
    color: rgba(255, 255, 255, .9);
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background: cover;
}

/*Manage Courses & Manage Reviews*/
.collapsible-header i{
    margin-right: 0;
}
.btn-container{
    margin-top: 1em;
}
.more{
    display: flex;
    justify-content: center;
}
.more .material-icons{
    position: relative;
    bottom: -1.2em;
    font-size: 1.8em;
}

.btn-container .btn{
    width: 6em;
}


.support-text{
font-size: 2em;
}

.head{
    text-align: center;
    margin-bottom: 2em;
}

.manage-courses{
    text-transform: capitalize;
}

/*Search*/
.no-results{
    margin-top: 50px;
}

/*Footer*/
.page-footer {
    background-color: #6c9079;
    
}

.page-footer a{
    color: white;
}

.page-footer a:hover{
    color: #dad8d8;
}



/*Forms*/
.register{
    display: flex;
    align-items: center;
    justify-content: center;
}

/*Cards*/
.card li {
    font-size: 16px;
}
.results .card {
    max-width: 600px;
}

.results .card img {
    max-height: 500px;
    max-width: 500px;
}

.form-card{
    background-color:#fbfbfb;
}
.featured{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 5%;
}
.featured-card{
    
    max-width: 700px;
}

.featured-card .card-image img{
    max-height: 400px;
}

.card-title{
    text-shadow: 5px 4px 3px rgba(150, 150, 144, 0.7);
}

.review .card-title{
    text-shadow: none;
}
.view{
    display: flex;
    align-items: center;
    justify-content: center;
}

.view .card {
    max-width: 600px;
    
}

.view .card img {
    max-height: 500px;
    max-width: 600px;
}

.review .username{
    
}

.card .region {
    text-transform: capitalize;
}

.card-size {

    height: 280px;
}

.card-row {
    display: block;
}

.top-courses .card .card-image img{
    height: 250px;
}

/*Search*/

.dropdown-content li>span{
    text-transform: capitalize;
    color: #1f5433;
}

/*buttons*/

.btn {
    background-color: #5f9c68;
    font-weight: 700;
    border: #5f9c68 solid 2px;
    border-radius: 8%;
}

.btn:hover {
    background-color: #3e7145;
    border: #3e7145 solid 2px;
}

.btn-register {
    background-color: #ff8f53;
    border: #ff8f53 solid 2px;
    font-size: 16px;
    letter-spacing: 2.5px;
    height: 40px;

}

.btn-register:hover {
    background-color: #d8692e;
    border: #d8692e solid 2px;

}

.btn-pagination{
    height: 30px;
    background-color: #b79c70;
    border: #b79c70 solid 2px;
    color: white;
    
}
.btn-pagination:hover{
    background-color: #b79c70;
    border: #b79c70 solid 2px;
    color: white;
}

.pagination{
    height: max-content;
}

.pagination li a{
    color: white;
}

.view .btn{
    width: 6em;
    margin: 0 5px;
}


.btn-review{

    background-color: #ea7c7c;
    border: #ea7c7c solid 2px;
    color: white;
}
.btn-review:hover{
    background-color: #b95959;
    border: #b95959 solid 2px;
    color: white;
}

.btn-edit{
    background-color: #3596fb;
    border: #3596fb solid 2px;
    color: white;
}
.btn-edit:hover{
    background-color: #1a69bb;
    border: #1a69bb solid 2px;
    color: white;
}

.btn-delete{

    background-color: #f02a2a;
    border: #f02a2a solid 2px;
    color: white;
}
.btn-delete:hover{
    background-color: #cd2222;
    border: #cd2222 solid 2px;
}

.btn-new{

    background-color: #2aa64a;
    border: #2aa64a solid 2px;
    color: white;
}
.btn-new:hover{
    background-color: #176d2d;
    border: #176d2d solid 2px;
}

/*Forms*/
.alert{
    display: flex;
    justify-content: center;
  
}  

textarea{
    height: 10rem;
}

.grey-star{
    font-size: 1.2em !important;
}
.gold-star {
    color: goldenrod;
    font-size: 1.2em !important; 
}

.stars span i {
    cursor: pointer;
    font-size: 1.3em !important; 
}

.error{
    color: #ff4b4b;
}

.slider {
    max-height: 70vh;
    display: block;
}

/*pagination*/
.pagination li.disabled a {
    display: none;
}


/*Media Queries*/


@media only screen and (min-width: 1200px){
     .page-footer{
        margin-top: 10em;
    }

    .view .btn{
        margin: 0 10px;
        
    }

    .no-results{
        margin-top: 40px;
        margin-bottom: 13em;
    }

    .no-results-text{
        margin-top: 70px;
    }

    .grey-star{
        font-size: 1.3em ;
    }

    .gold-star {
        font-size: 1.3em;
        
    }

    .stars span i {
        cursor: pointer;
        font-size: 1.4em !important; 
    }
}

